# spotify-playlist-maker

./: .env.example  .gitignore  README.md  pyproject.toml
src/spotify_playlist_maker/: __init__.py  analyzer.py  constants.py  main.py  parser.py  results.py
